--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     </div>
                     <div class="row justify-content-center justify-content-xl-start">
                         <div
-                            class="col-lg-6 col-md-6 col-12 mt-50 d-flex justify-content-center justify-content-xl-start">
+                            class="col-lg-6 col-md-6 col-12 mt-50 d-flex justify-content-center justify-content-md-end justify-content-xl-start">
                             <div class="bor-col pos-relative mwh">
                                 <p class="font-sh text-align-center mt-45">Sharing</p>
                                 <div class="d-flex justify-content-center">
@@ -197,7 +197,7 @@
                             </div>
                         </div>
                         <div
-                            class=" col-lg-6 col-md-6 col-12 pos-rel mt-50 d-flex justify-content-center justify-content-xl-start">
+                            class=" col-lg-6 col-md-6 col-12 pos-rel mt-50 d-flex justify-content-center justify-content-md-start justify-content-xl-start">
                             <div class="bor-col mwh pos-rel">
                                 <p class="font-sh text-align-center mt-45">Info</p>
                                 <div class="d-flex justify-content-center">
