--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
                         </div>
                     </div>
                     <div class="row justify-content-center">
-                        <div class="col-sm-6 col-12 mt-50 d-flex justify-content-center justify-content-sm-end">
+                        <div
+                            class="col-sm-6 col-12 mt-50 d-flex justify-content-center justify-content-sm-end justify-content-lg-start">
                             <div class="bor-col pos-relative mwh w-100">
                                 <p class="font-sh text-align-center mt-45">Sharing</p>
                                 <div class="d-flex justify-content-center">
